k8s/gap-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gap-portal
  labels:
    name: gap-portal
    app.kubernetes.io/name: gap-portal
